casandra integration tests prework (#6836)